与某些库冲突导致打包失败的问题

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,48 @@
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
 .idea/
-example/.dart_tool/
-example/android/.gradle/
-example/build/
+
+# The .vscode folder contains pages.launch configuration and tasks you configure in
+# VS Code which you may wish to be included in version control, so this line
+# is commented out by default.
+#.vscode/
+
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/.last_build_id
 .dart_tool/
-.dart_tool/version
-.idea/flutter_webview_pro.iml
-example/.flutter-plugins
-example/.flutter-plugins-dependencies
-example/.packages
-example/pubspec.lock
-.idea/flutter_webview_pro.iml
-example/pubspec.lock
-.idea/flutter_webview_pro.iml
-example/pubspec.lock
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/build/
+
+# Web related
+lib/generated_plugin_registrant.dart
+
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
+
+#自定义忽略文件（注解生成文件、包管理文件）
+**/*.r.dart
+**/*.m.dart
+**/*.g.dart
+**/pubspec.lock
+**/.flutter-plugins-dependencies
