--- a/example/ios/Flutter/Generated.xcconfig
+++ b/example/ios/Flutter/Generated.xcconfig
@@ -1,12 +1,14 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/zhimingwen/Develop/flutter2.0.4
+FLUTTER_ROOT=/Users/zhimingwen/Develop/flutter
 FLUTTER_APPLICATION_PATH=/Users/zhimingwen/Develop/GitHub/flutter_webview_pro/example
+COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=/Users/zhimingwen/Develop/GitHub/flutter_webview_pro/example/lib/main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build/ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
-DART_DEFINES=flutter.inspector.structuredErrors%3Dtrue
+EXCLUDED_ARCHS[sdk=iphonesimulator*]=arm64 i386
+DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
