--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,3 +1,3 @@
 sdk.dir=/Users/zhimingwen/Library/Android/sdk
-flutter.sdk=/Users/zhimingwen/Develop/flutter2.0.4
+flutter.sdk=/Users/zhimingwen/Develop/flutter
 flutter.buildMode=debug
