--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,3 +1,3 @@
-sdk.dir=/Users/zhimingwen/Library/Android/sdk
-flutter.sdk=/Users/zhimingwen/Develop/flutter
+sdk.dir=/Users/wenzhiming/adt-bundle-mac-x86_64-20140702/sdk
+flutter.sdk=/Users/wenzhiming/Documents/flutter2.2.2
 flutter.buildMode=debug
